--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Datcord</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+	<head>
+		<meta charset="utf-8" />
+		<title>Datcord</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" /> -->
-    <script src="https://kit.fontawesome.com/4ac23e1bd1.js" crossorigin="anonymous"></script>
-
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+		<script
+			src="https://kit.fontawesome.com/4ac23e1bd1.js"
+			crossorigin="anonymous"
+		></script>
+		<script
+			async
+			src="https://tag.clearbitscripts.com/v1/pk_8812724ad3662f4f97bd7ab74b7e49d7/tags.js"
+			referrerpolicy="strict-origin-when-cross-origin"
+		></script>
+	</head>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
